--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "build": "vite build",
   "lint": "eslint .",
   "preview": "vite preview",
-  "build:model1": "vite build --outDir dist/model1",
-  "build:model2": "vite build --outDir dist/model2",
+  "build:model1": "MODEL=model1 vite build --outDir dist/model1",
+  "build:model2": "MODEL=model2 vite build --outDir dist/model2",
   "predeploy": "npm run build:model1 && npm run build:model2",
   "deploy": "gh-pages -d dist"
 },
