--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "build": "vite build",
   "lint": "eslint .",
   "preview": "vite preview",
-  "build:model1": "set MODEL=model1 && vite build --outDir dist/model1",
-  "build:model2": "set MODEL=model2 && vite build --outDir dist/model2",
+  "build:model1": "set MODEL=model1 && vite build --outDir build/model1",
+  "build:model2": "set MODEL=model2 && vite build --outDir build/model2",
   "predeploy": "npm run build:model1 && npm run build:model2",
-  "deploy": "gh-pages -d dist"
-
+  "deploy": "gh-pages -d build"
 },
   "dependencies": {
     "@formspree/react": "^2.5.1",
